Added basic database connections and admin panel stuff, more to come

--- a/home/templates/genpage.html
+++ b/home/templates/genpage.html
@@ -7,13 +7,14 @@
         {% for section in sections %}
         <div>
             <h2>
-                {{section.title}}
+                {{section.section_title}}
             </h2>
             <p>
-                {{section.info}}
+                {{section.text}}
             </p>
         </div>
         {% endfor %}
         </div>
+        
     </body>
 </html>
