--- a/home/templates/genpage.html
+++ b/home/templates/genpage.html
@@ -1,8 +1,19 @@
 <html>
     <header>
+        <h1>{{book.title}}</h1>
         <h1>{{page_title}}</h1>
     </header>
     <body>
+        
+        <div>
+            {% if next_page != -1 %}
+                <button><a href="{% url 'book' bid=book.id pid=next_page %}">Next Page</a></button>
+            {% endif %}
+            {% if prev_page != -1 %}
+                <button><a href="{% url 'book' bid=book.id pid=prev_page %}">Previous Page</a></button>
+            {% endif %}
+        </div>
+        
         <div>
         {% for section in sections %}
         <div>
