--- a/home/static/page.css
+++ b/home/static/page.css
@@ -1,7 +1,18 @@
 /**page.css**/
 /*General Body*/
 
-
+#banner {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+ 
+  padding-bottom: -5;
+  margin: 0 auto; 
+  background: #225773;
+  color: #225773;
+ 
+}
 h1 {
  color: #ff9900;
  font-size: 20;
@@ -39,4 +50,46 @@ font-family: Sans-serif;
  background-color: #ffffff;
  color: #ff9900;
  padding: 5px;
+}
+
+
+
+/** Working on buttons forward and back **/
+
+.arrowLeft a {
+text-decoration: none;
+position: fixed;
+left: -5px;
+top: 45%;
+padding: 15px 10px;
+transition: .2s ease-in;
+}
+ 
+.arrowLeft a:hover {
+left: 0;
+transition: .2s ease-in;
+color: #fff;
+}
+ 
+.arrowRight a {
+text-decoration: none;
+position: fixed;
+right: -5px;
+top: 45%;
+padding: 15px 10px;
+
+transition: .2s ease-in;
+}
+ 
+.arrowRight a:hover {
+right: 0;
+transition: .2s ease-in;
+color: #fff;
+}
+ 
+.arrowNav a {
+text-decoration: none;
+background: #225773;
+color: #fff;
+font-size: 16px;
 }
