Added Basic Home Button and made Textbooks not open new tab

--- a/home/static/page.css
+++ b/home/static/page.css
@@ -93,3 +93,9 @@ background: #225773;
 color: #fff;
 font-size: 16px;
 }
+.HomeButton{
+ text-align: left;
+ position: relative;
+ text-decoration:none;
+ color: #ff9900;
+}
