--- a/home/templates/genpage.html
+++ b/home/templates/genpage.html
@@ -8,12 +8,12 @@
     </head>
    
         
-        
+    
+    
     <header>
-
-
-
-<hr size="20" color=#225773>
+        <hr size="20" color=#225773>
+        <a class="HomeButton" href = "{% url 'index' %}"><h1>ThothText</h1></a> 
+        <hr size="20" color=#225773>
         <h1>{{book.title}}</h1>
         <hr size="20" color=#225773>
         <h2>{{page_title}}</h2>
