--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -21,7 +21,7 @@
         {% for book in books %}
         <div class="responsive">
             <div class="img">
-                <a target ="_blank" href="{% url 'book' bid=book.id pid=001 %}">
+                <a href="{% url 'book' bid=book.id pid=001 %}">
                     <img src= "{{ book.cover.url }}" width ="200" height ="400"/>
                     <div class ="desc">
                         <h3>{{book.title}}</h3>
