--- a/home/templates/genpage.html
+++ b/home/templates/genpage.html
@@ -50,7 +50,7 @@
                 {{section.section_title}}
             </h3>
             <p>
-                {{section.text|safe}}
+                {{section.text}}
             </p>
         </div>
         {% endfor %}
