Initial css for user creation

--- a/home/templates/loginbase.html
+++ b/home/templates/loginbase.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+     {% load staticfiles %}
+    <link rel = "stylesheet" href= "{%static 'LoginBase.css' %}" >
+
     <head>
+           
         <title>ThothText-Login</title>
     </head>
+   
     <body>
+         
         <h1>{% block head %}{% endblock %}</h1>
-        {% block content %}{% endblock %}
- 
+       {% block content %}{% endblock %}
+          
     </body>
+   <div id = "Box"></div>
+   
 </html>
