--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -1,5 +1,11 @@
+<html>
+    
+<link rel = "stylesheet" href= "{ 'Login.css' %}" >
 {% extends "loginbase.html" %}
+<div ='top'>
 {% block head %}Login{% endblock %}
+</div>
+
 {% block content %}
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
@@ -14,3 +20,5 @@
     </form>
     <a href="/register">Register</a>
 {% endblock %}
+
+</html>
