--- a/home/static/myCSS.css
+++ b/home/static/myCSS.css
@@ -7,6 +7,7 @@ body {
  
 }
 
+
 #Intro {
  border-bottom: thin solid black;
  
@@ -140,8 +141,16 @@ a:active {
   background: #e2e4ee;
   color: #e2e4ee;
 }
-
-
+.registerbutton a {
+    width: 115px;
+    height: 25px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
 
 /*
 @media only screen and (max-width: 700px){
