--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -12,5 +12,5 @@
         <input type="submit" value="Login" />
         <input type="hidden" name="next" value="/" />
     </form>
-    <a href="/register">Register</a>
+    <a class ="arrowNav" href="/register">Register</a>
 {% endblock %}
