--- a/home/templates/loginbase.html
+++ b/home/templates/loginbase.html
@@ -1,11 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC >
 <html>
+    {% load staticfiles %}
     <head>
-        <title>ThothText</title>
+    <meta charset="utf-8">
+        <title>TothText</title>
+        <link rel = "stylesheet" href= "{% static 'myCSS.css' %}" >
+        
     </head>
+    <header>
+         <hr size="20" color=#225773>
+            <div id="Intro">
+                <h1>Thoth Text</h1>
+            </div>
+    </header>
     <body>
-        <h1>{% block head %}{% endblock %}</h1>
-        {% block content %}{% endblock %}
+        <h2>{% block head %}{% endblock %}</h2>
+        <div>
+            {% block content %}{% endblock %}
+        </div>
  
     </body>
 </html>
