--- a/home/templates/content/genpage.html
+++ b/home/templates/content/genpage.html
@@ -1,36 +1,7 @@
-<html>
-     <!DOCTYPE html>
-    {% load staticfiles %}
-    <head>
-    <meta charset="utf-8">
-        <title>TothText</title>
-        
-        <link rel = "stylesheet" href= "{% static 'page.css' %}" >
-    </head>
-   
-        
-    
-    
-    <header>
-        <hr size="20" color=#225773>
-        <a class="HomeButton" href = "{% url 'index' %}"><h1>ThothText</h1></a> 
-        <hr size="20" color=#225773>
-        <h1>{{book.title}}</h1>
-        <hr size="20" color=#225773>
-        <h2>{{page_title}}</h2>
-        
-    </header>
+{% extends "index.html" %}
+{% block content %}
     <body>
-        <!--
-        <div>
-            {% if prev_page != -1 %}
-                <button1><a href="{% url 'book' bid=book.id pid=prev_page %}">Previous Page</a></button>
-            {% endif %}
-            {% if next_page != -1 %}
-                <button1><a href="{% url 'book' bid=book.id pid=next_page %}">Next Page</a></button>
-            {% endif %}
-        </div>
-        -->
+        <h1>{{page.page_title}}</h1>
         <div class ="arrowNav">
             <div class ="arrowLeft">
             {% if prev_page != -1 %}
@@ -72,8 +43,8 @@
             </form>
             
             {% else %}
-            <a href = "{% url 'login' %}">Log In to make changes to this page!</a>
+            <a href = "{% url 'login' %}?next={{request.path}}">Log In to make changes to this page!</a>
             {% endif %}
         </div>
     </footer>
-</html>
+{% endblock %}
