--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -1,24 +1,25 @@
 <html>
     
 <link rel = "stylesheet" href= "{ 'Login.css' %}" >
-{% extends "loginbase.html" %}
-<div ='top'>
-{% block head %}Login{% endblock %}
-</div>
+{% extends "index.html" %}
+
+{% block head %}<div ='top'>Login</div>{% endblock %}
+
 
 {% block content %}
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
     <form method="post" action=".">{% csrf_token %}
-        <table border="0">
-            <tr><th><label for="id_username">Username:</label></th><td>{{ form.username }}</td></tr>
-            <tr><th><label for="id_password">Password:</label></th><td>{{ form.password }}</td></tr>
-        </table>
+        {{ form.as_table }}
         <input type="submit" value="Login" />
+        {% if next == "/L/?next=/" %}
         <input type="hidden" name="next" value="/" />
+        {% else %}
+        <input type="hidden" name="next" value="{{ next }}" />
+        {% endif %}
     </form>
-    <a href="/register">Register</a>
+    <p> Don't have an account? <a href="/register">Register Here!</a></p>
 {% endblock %}
 
 </html>
