--- a/home/templates/oldindex.html
+++ b/home/templates/oldindex.html
@@ -50,7 +50,7 @@
     
    
     <div class ="intro">
-                <h1>The Textbook for the People by the People</h1>
+                <h1>The Textbook for the People by the People.</h1>
                 <p>Open source and crowd funded for all look at all of this amazing typeing happening here Lorem ipsum dolor sit amet, est vocibus ceteros accusata at. Ut has populo delicata. Sea summo zril ei, vis te dolore noluisse, labore eripuit mnesarchum usu no. Ut vix sumo vitae integre. Everti utamur expetenda vim in.Id eam epicurei consequat efficiantur, ius quidam eloquentiam ei, et vel eius omittantur. Pro vivendum euripidis gloriatur te. Te usu quot augue reformidans, case quando urbanitas mel ne, omnis constituto vim ea. Mei te erat facer feugait. Ne erat dissentiet sea, quo at noluisse appetere torquatos. Te tota eirmod maluisset vis. Legere convenire mei ut, pro hinc alienum ocurreret ex. Pri at oblique ponderum theophraso, alii vidisse consulatu cu mea, constituto honestatis eu pro. Nihil saepe percipitur his ut, vis ex inani deleniti aliquando. Offendit tacimates in eum, per an sumo aliquam. Primis legendos atomorum nec et, adhuc sensibus gubergren qui an. Pri errem altera ex, eu accumsan forensibus disputationi mel. </p>
            
           </div>
