--- a/home/static/myCSS.css
+++ b/home/static/myCSS.css
@@ -15,26 +15,34 @@ body {
  
 }
 header, footer {
-    padding: 15px;
-    color: #FF9933;
+    padding: 25px;
+    color: #e3b000;
     font-size: larger;
     clear: left;
     text-align: center;
+    font-weight: bold;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedce7+0,596a72+100;Grey+3D+%231 */
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#596a72+0,cedce7+100 */
 background: #596a72; /* Old browsers */
+/*
 background: -moz-linear-gradient(left, #596a72 0%, #cedce7 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left, #596a72 0%,#cedce7 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right, #596a72 0%,#cedce7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#596a72', endColorstr='#cedce7',GradientType=1 ); /* IE6-9 */
+/*background: -webkit-linear-gradient(left, #596a72 0%,#cedce7 100%); /* Chrome10-25,Safari5.1-6 */
+/*background: linear-gradient(to right, #596a72 0%,#cedce7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#596a72', endColorstr='#cedce7',GradientType=1 ); /* IE6-9 */
 }
 
 h1{
     font-size: 55px;
+    
 }
 
 h2{
     font-size:30px;
+    padding-bottom: 10px;
+}
+
+h3{
+    font-size: 35px;
 }
 
 p1{
@@ -50,17 +58,31 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: white;
+   
+   
 }
 
 li {
     float: left;
+     /* 
+     potentially leave a border?
+     border:1px solid #bbb;
+    */
+    
 }
+
+
+
+
 
 li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 10px 16px;
+    font: bold;
+    font-weight: bold;
+    min-height: 73px;
     
 }
 
@@ -71,6 +93,27 @@ li a:hover:not(.active) {
 .active {
     background-color: black;
 }
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+}
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
 
 /**Making text parts of Website**/
 .intro {
@@ -91,22 +134,22 @@ padding-bottom: 25px;
 
 
 .containerBooks {
-    background-color: #FF9933;
+    background-color: white
  
 }
 
 .subsection{
     padding-top:  8px;
-    color: #FF9933;
+    color: #e3b000;
     background-color: #CCCCCC;
     clear: left;
     text-align: center;
     
     background: #596a72; /* Old browsers */
-background: -moz-linear-gradient(left, #596a72 0%, #cedce7 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left, #596a72 0%,#cedce7 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right, #596a72 0%,#cedce7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#596a72', endColorstr='#cedce7',GradientType=1 ); /* IE6-9 */
+/*background: -moz-linear-gradient(left, #596a72 0%, #cedce7 100%); /* FF3.6-15 */
+/*background: -webkit-linear-gradient(left, #596a72 0%,#cedce7 100%); /* Chrome10-25,Safari5.1-6 */
+/*background: linear-gradient(to right, #596a72 0%,#cedce7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#596a72', endColorstr='#cedce7',GradientType=1 ); /* IE6-9 */
 }
 
 
