added frag and drop rearrange

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,4 +1,6 @@
 <html>
+    <script type="text/javascript" src="/static/jquery.min.js">
+    </script>
     <!DOCTYPE html>
     {% load staticfiles %}
     <head>
