more work done. Added form css. Issues with specifiying different css pages still

--- a/home/templates/content/genpage.html
+++ b/home/templates/content/genpage.html
@@ -1,5 +1,7 @@
 {% extends "index.html" %}
 {% block content %}
+{%load staticfiles %}
+    <link rel = "stylesheet" href= "{% static 'page.css' %}" >
     <body>
         
         <h1>{{page.page_title}}</h1>
