--- a/home/static/LoginBase.css
+++ b/home/static/LoginBase.css
@@ -1,30 +1,44 @@
-/*login.css*/
-body{
-    font-family: Sans-serif;
-    background-color: #ffffff;
-    border-style: solid;
-    border-color: black;
-    width: 300px;
-    height: 300px;
-    padding: 15px;
-    z-index: 2;
+.boxp{
    
-    
-    
-}
-h1, h2 {
-     color: #ff9900;
-     z-index: 2;
-    
-}
-
-#Box{
-     position: fixed;
-    top: 12px;
-    left:12px;
-    width: 300px;
-    height: 300px;
     z-index: -1;
     background-color:#f2f2f2;
-    padding: 15px;
+    padding: 10px;
+    width: 00px;
+    border-bottom-style:  solid;
+    border-right-style: solid;
+    border-left-style: solid;
+}
+.boxt{
+     z-index: -1;
+    background-color:#f2f2f2 ;
+    padding: 10px;
+    width: 300px;
+      border-top-style:  solid;
+    border-right-style: solid;
+    border-left-style: solid;
+}
+
+
+
+input[type=submit]{
+     width: 100%;
+    background-color: #e3b000;;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+input[type=hidden] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit]:hover{
+    background-color: gray;
 }
