--- a/home/static/myCSS.css
+++ b/home/static/myCSS.css
@@ -3,7 +3,7 @@
 body {
  font-family: Sans-serif;
  background-color: #ffffff;
- color: #FF9933;
+ color:black ;
  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedce7+0,596a72+100;Grey+3D+%231 */
 
  
@@ -77,17 +77,19 @@ li {
 
 li a {
     display: block;
-    color: white;
+    color: bla;
     text-align: center;
     padding: 10px 16px;
     font: bold;
     font-weight: bold;
     min-height: 73px;
+   /* background-color: #696969;*/
+    
     
 }
 
 li a:hover:not(.active) {
-    background-color: #111;
+    background-color: black;
 }
 
 .active {
@@ -180,6 +182,7 @@ h2::first-line{
 
 /*Basic css for images*/
 
+
 #books
 
 div.img {
@@ -232,16 +235,6 @@ div.img {
     }
 }
 
-/*img{
- 
-display: inline-block;
-/* height: 800px;
-margin: 25px 10px;
- white-space: nowrap;
-
-}
-
-*/
 
 
 
@@ -287,18 +280,40 @@ a:active {
     font-weight: bold;
 }
 
-/*
-@media only screen and (max-width: 700px){
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
+/*Login page*/
+.boxp{
+   
+    z-index: -1;
+    background-color:#f2f2f2;
+    padding: 10px;
+    width: 300px;
+    border-bottom-style:  solid;
+    border-right-style: solid;
+    border-left-style: solid;
+}
+.boxt{
+     z-index: -1;
+    background-color:#f2f2f2 ;
+    padding: 10px;
+    width: 300px;
+      border-top-style:  solid;
+    border-right-style: solid;
+    border-left-style: solid;
 }
 
-@media only screen and (max-width: 500px){
-    .responsive {
-        width: 100%;
-    }
+
+
+input[type=submit]{
+     width: 70px;
+    background-color: #e3b000;;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-*/
+input[type=submit]:hover{
+    background-color: gray;
+}
+
+ 
