--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -24,11 +24,17 @@
                 <li><a href=#home> About Us </a></li>
                 <li><a href=#home> Contact Us </a></li>
                 <li><a>
-                    <form method="get" action="search">
+                    <form type="get" action="{% url 'search' %}">
+                    <input type="search" id="q" name="q" placeholder="Search..."/>
+                    <input type="submit" value="Go!"/>
+                    
+                    </form>
+                    <!--<form method="get" action="search">
                     <label style="color:orange" for="id_q">Search:</label>
                     <input type="text" name="q" id="id_q"/>
                     <input type="submit" value="Go!"/>
                     </form>
+                    -->
                     </a>
                 </li>
                 
