minor updates to buttons

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -27,7 +27,7 @@
                     <form method="get" action="search">
                     <label style="color:orange" for="id_q">Search:</label>
                     <input type="text" name="q" id="id_q"/>
-                    <input type="submit" value="Go!"/>
+                    <input type="submit" class="submit" value="Go!"/>
                     </form>
                     </a>
                 </li>
