--- a/home/static/myCSS.css
+++ b/home/static/myCSS.css
@@ -359,17 +359,52 @@ a:active {
 
 
 
-input[type=submit]{
-     width: 70px;
-    background-color: #e3b000;;
+.submit{
+    width: 70px;
+    background-color: #e3b000;
     color: black;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
 
+.submit:hover{
+    background-color: gray;
+}
+
+.LoginB{
+    width: 90px;
+    background-color: #e3b000;
+    padding: 12px 20px;
+    margin: 8px 0;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=hidden],select{
+    width: 70px;
+    background-color: #e3b000;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
 input[type=submit]:hover{
     background-color: gray;
+}
+
+.inputsHidden {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
  
