--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -21,7 +21,7 @@
         <input type="hidden" name="next" class="inputsHidden"  value="{{ next }}" />
         {% endif %}
     </form>
-    <p> Don't have an account? <a href="/register">Register Here!</a></p>
+    <p> Don't have an account? <a class ="register" href="/register" >Register Here!</a></p>
     </div>
 {% endblock %}
 
