--- a/home/templates/registration/register.html
+++ b/home/templates/registration/register.html
@@ -5,7 +5,7 @@
         <table border="0">
             {{ form.as_table }}
         </table>
-        <input type="submit" value="Register" />
+        <input type="submit" class= "LoginB" value="Register" />
     </form>
     <a href="{% url 'login' %}">Login</a>
     </div>
