--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -26,7 +26,7 @@
                 <li><a>
                     <form type="get" action="{% url 'search' %}">
                     <input type="search" id="q" name="q" placeholder="Search..."/>
-                    <input type="submit" value="Go!"/>
+                    <input type="submit" class="submitBanner" value="Go!"/>
                     
                     </form>
                     <!--<form method="get" action="search">
