created registration success page, update books display

--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -2,7 +2,7 @@
     {% extends "index.html" %}
  {% load staticfiles %}
 <link rel = "stylesheet" href= "{% static 'Login.css' %}" > >
-
+<body>
 
 {% block head %}<div class ="boxt"><h2>Login</h2></div>{% endblock %}
 
@@ -25,5 +25,5 @@
     </div>
 {% endblock %}
 
-   
+  </body> 
 </html>
