--- a/home/static/myCSS.css
+++ b/home/static/myCSS.css
@@ -153,7 +153,10 @@ padding-bottom: 25px;
     clear: left;
     text-align: center;
     
-    background: #596a72; /* Old browsers */
+    background: #596a72; 
+    
+    /** gradient code can add if wish**/
+    /* Old browsers */
 /*background: -moz-linear-gradient(left, #596a72 0%, #cedce7 100%); /* FF3.6-15 */
 /*background: -webkit-linear-gradient(left, #596a72 0%,#cedce7 100%); /* Chrome10-25,Safari5.1-6 */
 /*background: linear-gradient(to right, #596a72 0%,#cedce7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -196,6 +199,7 @@ div.img {
 }
 
 .img:hover{
+opacity: .8;
 background-color: #e2e4ee
 }
 
@@ -218,13 +222,15 @@ background-color: #e2e4ee
 .responsive {
     padding: 6 6px;
     float: left;
-    border: 1px solid black;
+    border: 2px solid;
+    border-color: #596a72;
     width: 24.99999%;
     margin-right: 5px;
+    background-color: #f8f8f8
 }
 
 .responsive:hover{
-    border: 8px solid black;
+    border: 3px solid black;
     background-color: #e2e4ee;
 }
 
@@ -310,13 +316,13 @@ a:visited {
 a:focus {
   border-bottom: 1px solid;
   background: #e2e4ee;
-  color: white;
+  color:#e3b000 ;
 }
 
 a:hover {
   border-bottom: 1px solid;     
   background: #e2e4ee;
-  color: white;
+  color: #e3b000;
 }
 
 a:active {
@@ -448,4 +454,33 @@ a.register:hover {
 a.register:active {
   background: #e2e4ee;
   color: #e2e4ee;
+}
+
+
+h7{
+    
+    background:#e3b000 ;
+    opacity: 80;
+    color:black;
+   border-top-left-radius:  12px;
+   border-top-right-radius: 12px;
+   padding: 4px;
+  
+
+    
+}
+
+.textArea{
+    background-color: #f8f8f8;
+    opacity: 80;
+    color:black;
+    padding: 12px;
+   margin-top:5px;
+    width: 272px;
+   
+}
+
+.Spacer{
+    position: absolute;
+    margin-top: 20px;
 }
